--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Responde/Index.cshtml
@@ -21,7 +21,7 @@
 
         <button class="collapsible terciary"> Resultados </button>
         <div class="content">
-            <img src="@Url.Action("GraficoPie")" alt="SimpleChart" />
+            <img src="@Url.Action("GraficoPie", new RouteValueDictionary(new { id = "PRE303" }))" alt="SimpleChart" />
         </div>
 
         <button class="collapsible terciary"> Observaciones </button>
@@ -48,7 +48,7 @@
     <div class="content">
         <button class="collapsible terciary"> Resultados </button>
         <div class="content">
-            <img src="@Url.Action("GraficoPie")" alt="SimpleChart" />
+            <img src="@Url.Action("GraficoPie", new RouteValueDictionary(new { id = "PRE404" }))" alt="SimpleChart" />
         </div>
 
         <button class="collapsible terciary"> Observaciones </button>
