Cambios en Base de Datos y en Vista de carga de archivo
Tablas Provincia, Cantón y Distrito creadas Cambios en la vista de carga de archivo

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CargarArchivo.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CargarArchivo.cshtml
@@ -5,21 +5,21 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width" />
     <title>Cargar Archivo</title>
 </head>
 <body>
-<div>
+
     @using (Html.BeginForm("CargarArchivo", "Administrador", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
-        <span>Select File:</span>
-        <input type="file" name="postedFile"/>
-        <hr/>
-        <input type="submit" value="Upload"/>
-        <br/>
+        <!--span>Select File:</span-->
+        <input type="file" name="postedFile" />
+        <br />
+        <input type="submit" value="Cargar" class="btn btn-default" />
+        <br />
         <span style="color:green">@ViewBag.Message</span>
     }
-</div>
+
 </body>
 </html>
 
