--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -10,6 +10,6 @@
     @Html.ActionLink("Preguntas", "Index", "Item")<br />
     @Html.ActionLink("Selecion Unica", "Index", "Seleccion_Unica")<br /> @*Esto no cumple DoD, necesitamos editarlo ASAP*@
     @Html.ActionLink("Texto Libre", "Index", "Texto_Libre")<br />
-    @Html.ActionLink("Formulario Resuelto", "Index", "Responde")
+    @Html.ActionLink("Formulario Resuelto", "Index", "Responde")<br />
+    @Html.ActionLink("Cargar archivo tipo csv", "CargarArchivo", "Administrador") @*Esto no cumple DoD*@
 </div>
-
