Cambios de la vista de asignar preguntas

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -8,16 +8,21 @@
     
         <tr>
             <td>
-                Codigo: <input type="text" name="inputname" value="ABC123" readonly>
-                Nombre: <input type="text" name="inputname" value="FormularioEnfasis1" readonly>
+                <div class="row">
+                    Codigo: <input type="text" name="inputname" value="ABC123" readonly>
+                    Nombre: <input type="text" name="inputname" value="FormularioEnfasis1" readonly>
+                </div>
+                
+                <div>
+                    <div style="float: right; width: 500px; padding: 15px;">
+                        @Html.Action("preguntasVParcial")
+                    </div>
 
-                <div style="float: right; width: 500px; padding: 15px;">
-                    @Html.Action("preguntasVParcial")
+                    <div style=" width: 500px; padding:  15px;">
+                        @Html.Action("seccionesVParcial")
+                    </div>
                 </div>
 
-                <div style=" width: 500px; padding:  10px;">
-                    @Html.Action("seccionesVParcial")
-                </div>
 
                 <button disabled>
                     Añadir pregunta al formulario.
