--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -1,10 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@using Opiniometro_WebApp.Controllers.Servicios;
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opiniómetro@UCR</title>
     @Styles.Render("~/Content/css")
+    <!--Para usar la clase login-error del archivo estilos-propios.css-->
+    @Styles.Render("~/Content/estilos-propios.css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -13,48 +16,51 @@
     <!--Barra-->
     @Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
 
-    <nav class="navbar navbar-inverse navbar-fixed-top" style="margin-top:145px" ;>
-        <div class="container">
-            <div class="navbar-header">
+    @if (IdentidadManager.usuario_loggeado() == true)
+    {
+        <nav class="navbar navbar-inverse navbar-fixed-top" style="margin-top:144px" ;>
+            <div class="container">
+                <div class="navbar-header">
 
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Opiniómetro@UCR", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <div class="dropdown">
-                    <button class="dropbtn">
-                        Usuario
-                        <i class="fa fa-caret-down"></i>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
-                    <div class="dropdown-contentt">
-                        @Html.ActionLink("Ver información de personas", "VerPersonas", "Admin")
-                        @Html.ActionLink("Insertar usuario", "CrearUsuario", "Admin")
-                        @Html.ActionLink("Cargar archivo", "CargarArchivo", "Administrador")
-                    </div>
+                    @Html.ActionLink("Opiniómetro@UCR", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
-                <div class="dropdown">
-                    <button class="dropbtn">
-                        Evaluaciones
-                        <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-contentt">
-                        @Html.ActionLink("Insertar formulario", "Index", "Formulario")
-                        @Html.ActionLink("Asignar formulario", "Index", "AsignarFormularios")
-                        @Html.ActionLink("Visualizar resultados de evaluaciones", "Index", "Responde")
-                        @Html.ActionLink("Sección", "Index", "Seccion")
-                        @Html.ActionLink("Ítem", "Index", "Item")
+                <div class="navbar-collapse collapse">
+                    <div class="dropdown">
+                        <button class="dropbtn">
+                            Usuario
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-contentt">
+                            @Html.ActionLink("Ver información de personas", "VerPersonas", "Admin")
+                            @Html.ActionLink("Insertar usuario", "CrearUsuario", "Admin")
+                            @Html.ActionLink("Cargar archivo", "CargarArchivo", "Administrador")
+                        </div>
                     </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">
+                            Evaluaciones
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-contentt">
+                            @Html.ActionLink("Insertar formulario", "Index", "Formulario")
+                            @Html.ActionLink("Asignar formulario", "Index", "AsignarFormularios")
+                            @Html.ActionLink("Visualizar resultados de evaluaciones", "Index", "Responde")
+                            @Html.ActionLink("Sección", "Index", "Seccion")
+                            @Html.ActionLink("Ítem", "Index", "Item")
+                        </div>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>@Html.ActionLink("Cerrar sesión", "CerrarSesion", "Auth")</li>
+                    </ul>
                 </div>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Cerrar sesión", "CerrarSesion", "Auth")</li>
-                </ul>
             </div>
-        </div>
-    </nav>
+        </nav>
+    }
 
     <div class="container body-content">
         @RenderBody()
