--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -10,7 +10,7 @@
 <body>
     <div class="container body-content">
 
-        @model Opiniometro_WebApp.Models.Persona
+        @model Opiniometro_WebApp.Models.PersonaPerfilEnfasisModel
 
         @{
             ViewBag.Title = "Index";
@@ -33,39 +33,39 @@
                     <h4>Editar Usuario</h4>
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.Cedula)
+                    @Html.HiddenFor(model => model.Persona.Cedula)
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })     
+                        @Html.LabelFor(model => model.Persona.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })     
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.Persona.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Persona.Nombre, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <!--@Html.LabelFor(model => model.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
+                        <!--@Html.LabelFor(model => model.Persona.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
                         <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Apellido1, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.Persona.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Persona.Apellido1, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <!--@Html.LabelFor(model => model.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
+                        <!--@Html.LabelFor(model => model.Persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
                         <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Apellido2, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.Persona.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Persona.Apellido2, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.Persona.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+                            @Html.EditorFor(model => model.Persona.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Persona.Direccion, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
