Creacion de la vista previa de formulario.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/PreguntasAsignadas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/PreguntasAsignadas.cshtml
@@ -25,6 +25,7 @@
             </td>
             <td>
                 @Html.DisplayFor(model => item.Item.TextoPregunta)
+                @Html.Action("itemVParcial", "Item" ,new {codigo = item.ItemId})
             </td>
 
 
