--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Opiniometro_WebApp.Models.Formulario>
+﻿@model Opiniometro_WebApp.Models.Formulario
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,13 +7,13 @@
 <thead>
     
         <tr>
-            @foreach (var item in Model)
-            {
+            @*@foreach (var item in Model)*@
+            @*  *@{
                 <td>
                 
                     <div class="row">
-                        <h4>Codigo: @item.CodigoFormulario </h4>
-                        <h4>Nombre: @item.Nombre</h4>
+                        <h4>Codigo: @Model.CodigoFormulario </h4>
+                        <h4>Nombre: @Model.Nombre</h4>
                     </div>
 
                     <div>
@@ -33,14 +33,13 @@
 
                     <div style="float: left; width: 1000px; padding: 50px;">
                         @Html.Action("SeccionesAsignadas", new
-                   {
-                       CodForm = item.CodigoFormulario})
+                                    {CodForm = Model.CodigoFormulario})
                     </div>
 
                     <input type="submit" value="Generate report" />
                     <div style="clear: both;"></div>
                 </td>
-            }
+            
         </tr>
     
 </thead>
