--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -54,9 +54,11 @@
         </div>
     </div>
 
-   @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
-    {
-        <div class="row">
+  
+    <div class="row">
+
+        @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
+        {
             <div class="col-sm-8">
                 <div class="panel panel-default">
                     <div class="panel-heading"><h3>Resultados:</h3></div>
@@ -94,37 +96,42 @@
                 </div>
             </div>
 
+        }
 
+        <div class="col-sm-4">
 
-            <div class="col-sm-4">
-
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h3>Tus formularios</h3></div>
-                    <div class="panel-body">
-
-                        <table class="table">
-                            <!-- Tabla para mostrar los formularios -->
-                            <tr></tr>
-                            @foreach (var item in Model.Formularios)
-                            {
-                                <tr>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Nombre)
-
-                                    <td>
-                                        <!-- checkbox para elegir formulario-->
-                                        <div align='center'><input type="checkbox" name="Formulario" value="Formulario"></div><br>
-                                </tr>
-                            }
-                        </table>
+            <div class="panel panel-default">
+                <div class="panel-heading"><h3>Tus formularios</h3></div>
+                <div class="panel-body">
+                    @using (Html.BeginForm("SeleccionFormularios", "SeleccionFormularios", FormMethod.Post, new { @class = "form-inline", role = "form" }))
+                    {
+                        <div class="form-group">
+                            <input type="text" class="form-control pull-right" name="DATA">
+                        </div>
+                        <button type="submit" id="buttonForm" class="btn btn-primary pull-right">Get Data</button>
+                    }
+                    <div id="divPartial">
+                        @Html.Partial("SeleccionFormularios", Model.Formularios)
                     </div>
+                    @*
+        @{
+            Html.RenderPartial("SeleccionFormularios", Model.Formularios);
+        }*@
+
                 </div>
             </div>
         </div>
+    </div>
 
         <div align='center'>
             <input type="submit" name="Asignar" id="Asignar" value="Asignar" />
         </div>
-    }
+    
 </div>
+
+<script type="text/javascript">
+  $("#button").click(function(e){
+    $('#form').submit();
+    $('#divPartial').load('/SeleccionFormularios/POSTSeleccionFormularios');
+  });
+</script>
